# notetaker-tauri

./: LICENSE  README.md
core/: Cargo.toml
core/common/: Cargo.toml  lib.rs
docs/: ARCHITECTURE.md
migrations/: 0001_init.sql
