[workspace]
members = [
  "common",
  "workers/transcription",
  "workers/ocr",
  "embeddings",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["notetaker-tauri contributors"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }

# Shared workspace dependencies
common = { path = "common" }
